# glacex-ai

./: README.md  pipeline_state.json  pyproject.toml  sources.yaml
agents/: analysis_agent.py  circuit_breaker.py  dedup_agent.py  delivery_agent.py  ingestion_agent.py  llm_agent.py  nlp_agent.py  observability.py
config/: notification_settings.yaml  prompt_versions.yaml  sources.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
db/: add_failed_extractions.py  add_pipeline_runs.py  fix_migrations.py  setup.py  setup_dedup.py
delivery/: digest_generator.py  ntfy_delivery.py
docs/: 404.html  PRD.md  index.html
llm/: retriever.py
prompts/: classify_v1.txt  classify_v2.txt  digest_v1.txt  extract_v1.txt  extract_v2.txt
reports/: 01_introduction.md  02_tech_stack.md  03_project_status_comprehensive.md  04_problems_and_lessons.md  05_phase_1_ingestion_summary.md  06_ingestion_deduplication_and_enrichment.md
scratch/: apply_migrations.py  download_stitch_screens.py
scripts/: analyze_feedback.py  archive_job.py  eval_classify_prompt.py  fetch_langsmith_misclassifications.py  profile_pipeline.py  promote_classify_prompt.py  query_retriever.py  record_feedback.py  seed_sources.py  validate_env.py  validate_sources.py  verify_models.py
sources/: backlog.yaml
tests/: test_archive_job.py  test_circuit_breakers.py  test_digest_generator.py  test_ensemble_retriever.py  test_gemini_chain.py  test_health_monitoring.py  test_ntfy_delivery.py  test_prompt_optimization.py  test_run_recovery.py  (+1 more)
(+75 files in other folders)
