[project]
name = "glacex-ai"
version = "0.1.0"
description = "Autonomous, multi-agent curation engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain~=0.3.0",
    "langchain-community",
    "playwright~=1.45.0",
    "httpx~=0.27.0",
    "trafilatura~=1.9.0",
    "groq~=0.9.0",
    "google-generativeai~=0.7.0",
    "supabase~=2.0",
    "psycopg2-binary",
    "sentence-transformers~=3.0.0",
    "spacy~=3.7.0",
    "rank-bm25",
    "sentry-sdk",
    "langsmith",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "scrapers", "db", "nlp", "llm", "delivery"]
